# a2a-mcp-multi-agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  FAILURE_MODES.md  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  run_demo.py
.github/workflows/: ci.yml
benchmarks/: a2a_overhead.py
common/: __init__.py  a2a_service.py  audit.py  bandit.py  cache.py  costs.py  embeddings.py  events.py  guard.py  report.py  resilience.py  tracing.py
critic_agent/: a2a_server.py  agent.py
dashboard/: server.py
evals/: RESULTS.md  run_evals.py
mcp_server/: search_server.py
redteam/: corpus.jsonl  harness.py
registry/: client.py  server.py
research_agent/: a2a_client.py  agent.py  mcp_client.py
tests/: test_auth_and_cache.py  test_bandit.py  test_costs.py  test_e2e_offline.py  test_eval_gate.py  test_guard.py  test_phase3.py  test_resilience.py  test_tracing.py
writer_agent/: a2a_server.py  agent.py  agent_card.json
