[project]
name = "a2a-interop-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.1.0",
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.8",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langgraph>=1.2.9",
    "mcp>=1.28.1",
    "openai-agents>=0.18.2",
    "openinference-instrumentation-langchain>=0.1.67",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic-ai-slim[anthropic,openai]>=2.9.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
